# opengl-cg

./: CMakeLists.txt  README.md
Renderer/apps/: TestClearColor.h  TestPhongLightModel.cpp  TestPhongLightModel.h  TestTexture2D.cpp  TestTexture2D.h
Renderer/engine/Gui/: gui.h
Renderer/engine/asset/: mesh.h
Renderer/engine/core/: Cube.cpp  Mesh.h  Triangle.h  Vertex.h
Renderer/engine/opengl/: OpenGLPipeline.cpp  OpenGLPipeline.h
Renderer/engine/wrapper/: glfw-wrapper.cpp
Tutorial/: CMakeLists.txt
Tutorial/assets/hello-triangle/: triangle.fs  triangle.vs
Tutorial/include/: shader.cpp
Tutorial/sources/: getting-started.cpp  hello-rectangle.cpp  hello-triangle.cpp
assets/shaders/: triangle.frag  triangle.vert
assets/shaders/lights/: cube.fs  cube.vs
assets/shaders/lightsTest/: 2.1.basic_lighting.fs  basic_lighting.fs
assets/shaders/test/: cubeTest.frag
assets/shaders/texture/: cube.frag  cube.vert
docs/: getting-started.md  hello-triangle.md  init.md  overview.md  rendering-pipeline.md  triangle.md  tutorial.h
include/: GenericShape.h  Mesh.h  Shader.h  Vertex.h  log.h  utils.h
shaders/: triangle.frag  triangle.vert
shaders/01/: triangle.frag  triangle.vert
shaders/02/: 02.frag  02.vert
source/: main.cpp
source/apps/: TestApp.cpp  TestApp.h
source/engine/asset/: model.h  shader.h
source/engine/core/: Camera.hpp  Cube.hpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Vertex.h  Window.h  log.cpp  log.h  utils.cpp  utils.h
source/engine/opengl/: OpenGLApp.cpp  OpenGLApp.h  OpenGLPipeline.cpp  OpenGLPipeline.h  log.cpp  utils.cpp  utils.h
source/engine/wrapper/: glfw-wrapper.cpp  glfw-wrapper.h
src/: GenericShape.cpp  Shader.cpp  Triangle.cpp  main.cpp  utils.cpp
test/: CMakeLists.txt  camera.h  shader.h  test.cpp
